--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://dribbble.com/jobs/17223-UI-UX-Designer-m-w-d?source=twitter'>
+      UI/UX Designer (m/w/d) at Lotum - Bad Nauheim - Dribbble Design Jobs
+  </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Rituals1/743999698631273-ui-designer'>Rituals UI Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=n5zlqMwG'>Jobvite, Inc. Careers - UI Developer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -60,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/greenparksports/jobs/4440274002'>Job Application for UI/UX Designer at GreenPark Sports</a></h5> 
+<h5><a href='https://boards.greenhouse.io/greenparksports/jobs/4440274002'>Job Application for UI/UX Designer at GreenPark Sports</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -124,7 +134,7 @@
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oGjH9fwz&__jvst=Employee&__jvsd=s3HYhiwM&__jvsc=Twitter&bid=ntrXpMwx'> Splash Damage Careers - Senior UI Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oGjH9fwz&__jvst=Employee&__jvsd=s3HYhiwM&__jvsc=Twitter&bid=ntrXpMwx'> Splash Damage Careers - Senior UI Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -158,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25484-Senior-UI-UX-Designer?source=feed'>
       Senior UI/UX Designer at Insiten - Atlanta, GA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
@@ -194,11 +204,11 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Stockbit/743999698559241-ui-ux-designer'>Stockbit UI/UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Stockbit/743999698559241-ui-ux-designer'>Stockbit UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6982718/graduate-trainee-recruitment-consultant-virgin-fasttrack-100-company/?TrackID=12'>Graduate Trainee Recruitment Consultant - Virgin Fasttrack 100 Company job with TRIBECA RECRUITMENT | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6982718/graduate-trainee-recruitment-consultant-virgin-fasttrack-100-company/?TrackID=12'>Graduate Trainee Recruitment Consultant - Virgin Fasttrack 100 Company job with TRIBECA RECRUITMENT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -390,7 +400,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oQtkbfwy&__jvst=Tenable+Employee&__jvsd=szNYEhwK&__jvsc=Twitter&bid=nIxJoMwD'>Tenable Careers - Senior Software Engineer - UI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oQtkbfwy&__jvst=Tenable+Employee&__jvsd=szNYEhwK&__jvsc=Twitter&bid=nIxJoMwD'>Tenable Careers - Senior Software Engineer - UI</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -450,16 +460,6 @@
       UX/UI Designer (f/m/d) - zenloop GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
-      UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">London London</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698449101-ui-programmer-h-f-'>Ubisoft UI programmer (H/F) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
